// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupermindOnboarding render consumer onboarding correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    Array [
      Object {
        "paddingHorizontal": 16,
      },
      Object {
        "paddingTop": 24,
      },
      Object {
        "paddingBottom": 24,
      },
    ]
  }
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  scrollEnabled={false}
>
  <View>
    <View
      style={
        Object {
          "marginBottom": 40,
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
            },
            Object {
              "fontFamily": "Roboto-Bold",
            },
            Object {
              "fontSize": 18,
              "lineHeight": 28,
            },
            Object {
              "textAlign": "left",
            },
          ]
        }
      >
        Get replies from your favorite creators by sending them paid offers.
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 32,
          "marginRight": 40,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 28,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 28,
              },
              Object {
                "marginTop": 4,
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#AEB0B8",
                  "fontSize": 29.12,
                },
                Object {},
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "fontFamily": "Roboto-Bold",
              },
              Object {
                "fontSize": 18,
                "lineHeight": 28,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Set an offer amount
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#B8C1CA",
              },
              Object {
                "fontFamily": "Roboto",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Send an offer of cash or tokens. The creator earns the offer amount when they reply.
           
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 32,
          "marginRight": 40,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 28,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 28,
              },
              Object {
                "marginTop": 4,
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#AEB0B8",
                  "fontSize": 28,
                },
                Object {},
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "fontFamily": "Roboto-Bold",
              },
              Object {
                "fontSize": 18,
                "lineHeight": 28,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Prompt with a public post
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#B8C1CA",
              },
              Object {
                "fontFamily": "Roboto",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          You'll make a new public post that the target creator can reply to.
           
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 32,
          "marginRight": 40,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 28,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 28,
              },
              Object {
                "marginTop": 4,
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#AEB0B8",
                  "fontSize": 28,
                },
                Object {},
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "fontFamily": "Roboto-Bold",
              },
              Object {
                "fontSize": 18,
                "lineHeight": 28,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Get a reply
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#B8C1CA",
              },
              Object {
                "fontFamily": "Roboto",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Creators have 7 days to reply to your post. You will not be charged if they do not reply.
           
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
    <View
      activeOpacity={0.7}
      onPress={[MockFunction]}
      style={
        Array [
          Array [
            Object {
              "borderRadius": 100,
              "height": 36,
              "overflow": "hidden",
            },
          ],
          undefined,
        ]
      }
      testID="dismissButton"
    >
      <ExpoLinearGradient
        colors={
          Array [
            "#2B52E8",
            "#5238ED",
            "#9B0FA8",
          ]
        }
        end={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        locations={
          Array [
            0,
            0.4,
            1,
          ]
        }
        start={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        style={
          Array [
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "paddingHorizontal": 8,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Roboto-Medium",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            Continue
          </Text>
        </View>
      </ExpoLinearGradient>
    </View>
  </View>
</RCTScrollView>
`;

exports[`SupermindOnboarding renders producer onboarding correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    Array [
      Object {
        "paddingHorizontal": 16,
      },
      Object {
        "paddingTop": 24,
      },
      Object {
        "paddingBottom": 24,
      },
    ]
  }
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  scrollEnabled={false}
>
  <View>
    <View
      style={
        Object {
          "marginBottom": 40,
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
            },
            Object {
              "fontFamily": "Roboto-Bold",
            },
            Object {
              "fontSize": 18,
              "lineHeight": 28,
            },
            Object {
              "textAlign": "left",
            },
          ]
        }
      >
        Get paid to reply to your fans.
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 32,
          "marginRight": 40,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 28,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 28,
              },
              Object {
                "marginTop": 4,
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#AEB0B8",
                  "fontSize": 29.12,
                },
                Object {},
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "fontFamily": "Roboto-Bold",
              },
              Object {
                "fontSize": 18,
                "lineHeight": 28,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          How to earn
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#B8C1CA",
              },
              Object {
                "fontFamily": "Roboto",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Fans send offers of cash and tokens, which you earn by simply replying. Minds collects just a 10% platform fee (vs. 30% fees on other platforms), and our payment processor charges a small fee per transaction.
           
          <Text
            onPress={[Function]}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Roboto",
                },
                Array [
                  Object {
                    "color": "#B8C1CA",
                  },
                  Object {
                    "textDecorationLine": "underline",
                  },
                ],
              ]
            }
          >
            See terms and conditions.
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 32,
          "marginRight": 40,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 28,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 28,
              },
              Object {
                "marginTop": 4,
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#AEB0B8",
                  "fontSize": 28,
                },
                Object {},
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "fontFamily": "Roboto-Bold",
              },
              Object {
                "fontSize": 18,
                "lineHeight": 28,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          It's your content
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#B8C1CA",
              },
              Object {
                "fontFamily": "Roboto",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Your replies are public for all of your followers, so everyone benefits from the interaction.
           
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 32,
          "marginRight": 40,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 28,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 28,
              },
              Object {
                "marginTop": 4,
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#AEB0B8",
                  "fontSize": 28,
                },
                Object {},
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "marginRight": 16,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "fontFamily": "Roboto-Bold",
              },
              Object {
                "fontSize": 18,
                "lineHeight": 28,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Limitations
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#B8C1CA",
              },
              Object {
                "fontFamily": "Roboto",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Once you accept an offer, your reply can't be deleted. And NSFW content is currently not supported with Supermind.
           
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
    <View
      activeOpacity={0.7}
      onPress={[MockFunction]}
      style={
        Array [
          Array [
            Object {
              "borderRadius": 100,
              "height": 36,
              "overflow": "hidden",
            },
          ],
          undefined,
        ]
      }
      testID="dismissButton"
    >
      <ExpoLinearGradient
        colors={
          Array [
            "#2B52E8",
            "#5238ED",
            "#9B0FA8",
          ]
        }
        end={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        locations={
          Array [
            0,
            0.4,
            1,
          ]
        }
        start={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        style={
          Array [
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "paddingHorizontal": 8,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Roboto-Medium",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            Continue
          </Text>
        </View>
      </ExpoLinearGradient>
    </View>
  </View>
</RCTScrollView>
`;
